change initial settings on index.html

--- a/tests/index.html
+++ b/tests/index.html
@@ -11,8 +11,10 @@
 //        });
         
         window.monthpicker = new MaterialMonthpicker('material-monthpicker', {
-          lang: 'de',
-          theme: 'dark',
+          lang: 'en',
+          orientation: 'portrait',
+          primaryColor: '#795548',
+          buttons: true,
         });
       
 //        window.yearpicker = new yearpicker('#material-yearpicker', {
@@ -23,13 +25,17 @@
     </script>
   </head>
   <body>
+<!--
     <span>datepicker</span>
     <input type="text" id="material-datepicker">
+-->
     <br>
     <span>monthpicker</span>
     <input type="text" id="material-monthpicker">
     <br>
+<!--
     <span>yearpicker</span>
     <input type="text" id="material-yearpicker">
+-->
   </body>
 </html>
