--- a/tests/index.html
+++ b/tests/index.html
@@ -16,7 +16,7 @@
           primaryColor: '#795548',
           buttons: true,
           onNewDate : function() {
-            alert();
+//            alert();
           }
         });
       
