--- a/tests/index.html
+++ b/tests/index.html
@@ -25,6 +25,7 @@
           lang: 'de',
           orientation: 'portrait',
           primaryColor: '#795548',
+          weekBegin: 'monday',
           buttons: true,
           onNewDate: function() {
 //            alert();
