from Month picker to global Datepicker

--- a/tests/index.html
+++ b/tests/index.html
@@ -10,7 +10,7 @@
 //          
 //        });
         
-        window.monthpicker = new MaterialMonthpicker('.material-monthpicker', {
+        window.monthpicker = new MaterialDatepicker('.material-monthpicker', {
           type: "month",
           lang: 'en',
           orientation: 'portrait',
@@ -21,7 +21,7 @@
           outputElement: '.month'
         });
       
-        window.datepicker = new MaterialMonthpicker('.material-datepicker', {
+        window.datepicker = new MaterialDatepicker('.material-datepicker', {
           type: "date",
           lang: 'de',
           orientation: 'portrait',
