--- a/tests/index.html
+++ b/tests/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="../src/material-datepicker.css">
-    <script type="text/javascript" src="../assets/javascript/material-monthpicker.js"></script>
+    <link rel="stylesheet" type="text/css" href="/src/material-datepicker.min.css">
+    <script type="text/javascript" src="/src/material-datepicker.min.js"></script>
     
     <script type="text/javascript">
       document.addEventListener('DOMContentLoaded', function () {
