:bug: right src inside demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/dist/material-datepicker.min.css">
-    <script type="text/javascript" src="/dist/material-datepicker-with-moment-js.js"></script>
+    <link rel="stylesheet" type="text/css" href="../dist/material-datepicker.min.css">
+    <script type="text/javascript" src="../dist/material-datepicker-with-moment-js.js"></script>
     
     <script type="text/javascript">
       document.addEventListener('DOMContentLoaded', function () {
