update cdn links

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Material Datepicker</title>
     <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="https://rawgit.com/FreddyFY/material-datepicker/master/dist/material-datepicker.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/FreddyFY/material-datepicker/master/dist/material-datepicker.css">
 <!--    <script type="text/javascript" src="http://momentjs.com/downloads/moment-with-locales.min.js"></script>-->
-    <script type="text/javascript" src="https://rawgit.com/FreddyFY/material-datepicker/master/dist/material-datepicker-with-moment-js.js"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/FreddyFY/material-datepicker/master/dist/material-datepicker-with-moment-js.js"></script>
   <link rel="stylesheet" type="text/css" href="src/main.css">
     
     <!-- Vendor -->
